added imgui and directional and spot lights

--- a/imgui.ini
+++ b/imgui.ini
@@ -1,15 +1,30 @@
 [Window][Debug##Default]
-Pos=17,9
-Size=1349,173
+Pos=0,1028
+Size=362,106
 Collapsed=1
 
 [Window][Light Properties]
-Pos=1,31
+Pos=16,809
 Size=508,239
 Collapsed=0
 
 [Window][Material]
-Pos=1407,16
-Size=376,196
+Pos=1157,23
+Size=632,139
+Collapsed=0
+
+[Window][Point Light Properties]
+Pos=10,4
+Size=345,228
+Collapsed=0
+
+[Window][Directional Light Properties]
+Pos=18,726
+Size=514,246
+Collapsed=0
+
+[Window][Floor Model]
+Pos=22,343
+Size=504,223
 Collapsed=0
 
