--- a/imgui.ini
+++ b/imgui.ini
@@ -9,17 +9,17 @@ Size=508,239
 Collapsed=0
 
 [Window][Material]
-Pos=1362,306
+Pos=1378,3
 Size=421,149
-Collapsed=0
+Collapsed=1
 
 [Window][Point Light Properties]
-Pos=5,1
+Pos=3,-2
 Size=345,228
 Collapsed=0
 
 [Window][Directional Light Properties]
-Pos=20,682
+Pos=20,681
 Size=421,150
 Collapsed=0
 
